--- a/client/app/(navbar)/navbar.module.css
+++ b/client/app/(navbar)/navbar.module.css
@@ -1,3 +1,78 @@
 .navbar {
    display: flex;
+    overflow: hidden;
+    align-items: center;
+    text-align: center;
+    justify-content: center; 
+    background-color: #333333;
+    height: 40px;
+    padding: 0 20px;
+}
+
+.logo {
+    display: none;
+    font-family: var(--font-black-ops-one);
+    font-size: xx-large;
+    letter-spacing: -1px;
+    text-wrap: nowrap;
+}
+
+.navRight {
+    display: flex;
+    height: 40px;
+}
+
+.navBlock {
+    display: flex; 
+    height: 40px;
+    min-width: 100px;
+    align-items: center;
+    justify-content: center;
+}
+.navBlock:hover {
+    background-color: #777777;
+}
+
+.link {
+   cursor: pointer;
+}
+
+.userDropdown, .profileDropdown {
+   float: left;
+   overflow: hidden;
+}
+
+.dropdownContent {
+   display: none;
+   position: absolute;
+    top: 40px;
+   background-color: #484848;
+    z-index: 1;
+}
+
+.dropdownContent > a {
+    float: none;
+    padding: 10px 10px;
+    display: block;
+    text-align: left; 
+}
+
+.userDropdown:hover #userDropdownContent
+ {
+   display: block;
+}
+.profileDropdown:hover #profileDropdownContent {
+    display: block;
+}
+.dropdownContent > *:hover {
+   background-color: #777777; 
+}
+
+@media screen and (min-width: 700px) {
+    .logo {
+        display: block;
+    }
+    .navbar {
+        justify-content: space-between;
+    }
 }
