--- a/client/app/(navbar)/navbar.module.css
+++ b/client/app/(navbar)/navbar.module.css
@@ -1,6 +1,9 @@
 .navbar {
   background-color: #333333;
   height: 40px;
+  color: white;
+  font-weight: 400;
+  font-size: 18px;
 }
 
 .navWrapper {
@@ -10,7 +13,7 @@
   overflow: hidden;
   align-items: center;
   text-align: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .logo {
@@ -29,7 +32,7 @@
 .navBlock {
   display: flex;
   height: 40px;
-  min-width: 120px;
+  min-width: 150px;
   align-items: center;
   justify-content: center;
 }
@@ -51,7 +54,7 @@
 .dropdownContent {
   display: none;
   position: absolute;
-  width: 120px;
+  width: 150px;
   top: 40px;
   background-color: #484848;
   z-index: 1;
@@ -77,7 +80,7 @@
   background-color: #777777;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 780px) {
   .logo {
     display: block;
   }
