--- a/client/app/profile/management.module.css
+++ b/client/app/profile/management.module.css
@@ -3,9 +3,14 @@
   margin: 15px auto;
 }
 
+.managementAddNew {
+  font-weight: 600;
+  cursor: pointer;
+}
+
 .managementTable {
   margin: 20px 0;
-  width: 400px;
+  width: 500px;
   border-collapse: collapse;
 }
 
@@ -27,6 +32,7 @@
   background-color: white;
   font-size: 12px;
   min-height: 30px;
+  min-width: 75px;
   padding: 2px 10px;
 }
 
@@ -35,5 +41,18 @@
   cursor: pointer;
 }
 
-.managementForm {
+#buttonCancel {
+  background-color: #ffaeae;
+}
+
+#buttonCancel:hover {
+  background-color: #fc8989;
+}
+
+.managementInput {
+  width: 75px;
+  height: 30px;
+  border-radius: 5px;
+  border: #bfbfc2 1px solid;
+  text-align: center;
 }
