--- a/client/app/register/authForm.module.css
+++ b/client/app/register/authForm.module.css
@@ -1,6 +1,7 @@
 ﻿.formBox {
   background-color: white;
-  width: 70%;
+  width: 90%;
+  max-width: 500px;
   border-radius: 10px;
   margin: 50px auto;
   padding-top: 10px;
@@ -29,7 +30,7 @@
   background-color: #f0f5ff;
   border-radius: 10px;
   padding: 10px;
-  font-size: 14px;
+  font-size: large;
 }
 
 .authInput:focus {
@@ -38,12 +39,12 @@
 
 .authForm button {
   width: 35%;
-  margin: 20px auto 0;
+  margin: 25px auto 0;
   border: none;
   background-color: dodgerblue;
   border-radius: 10px;
   padding: 10px;
-  font-size: 16px;
+  font-size: large;
   font-weight: bold;
   color: white;
 }
@@ -59,4 +60,15 @@
 .authFormError {
   height: 20px;
   text-align: center;
+}
+
+.responseError {
+  margin-top: 20px;
+  font-size: 18px;
+  text-align: center;
+}
+
+@media (min-width: 1440px) {
+  .authForm input {
+  }
 }
